--- a/css/style.css
+++ b/css/style.css
@@ -1,60 +1,43 @@
 :root {
-    background-color: rgb(56, 78, 42);
+    
     box-sizing: border-box;
     padding: 0;
     margin: 0;
     font-family:Verdana, Geneva, Tahoma, sans-serif;
     --drop-shadow: rgba(36, 36, 36, 0.8);
+    --optic-yellow: #CCFF00;
+    --court-green: rgb(56, 78, 42)
 }
 body {
     display: flex;
     padding: 0;
     margin: 0;
-
+    background-color: var(--court-green);
 } 
 .left-container {
     position: relative;
+    background-image: url('../img/tennis_ball.jpg');
+    background-position: center;
+    background-size: auto;
+    background-repeat: no-repeat;
     width: 40vw;
-    height: auto;
-    
-}
-.tennis-ball {
-    position: absolute;
-    width: 100%;
     height: 100vh;
-    object-fit: cover;
-    
-
-}
-.brand-container {
-    position: absolute;
-    top: 50%;
-    width: 100%;
-}
-.text-background {
-    position: absolute;
-    top: 50%;
-    width: 100%;
-    background-color: rgba(29, 29, 29, 0.5);
-    width: 100%;
-    height: 100px;
 }
 .title-container {
-    
+    background-color: rgba(29, 29, 29, 0.5);
+    padding: 40px 0;
     position: absolute;
-    top: 50%;
+    top: 40%;
+    left: 50%;
+    transform: translate(-50%, -50%);
     width: 100%;
+
     display: flex;
     justify-content: center;
     align-items: center;
-    text-align: center;
-    
-}
-.logo {
-   
+    text-align: center; 
 }
 .title {
-
     color: white;
 }
 
@@ -77,7 +60,7 @@ body {
 /*MIDDLE*/
 .middle-section {
     background-color: white;
-    box-shadow: 0 5px 10px -5px var(--drop-shadow);
+    box-shadow: 0 10px 10px -5px var(--drop-shadow);
     padding: 25px 40px;
     display: flex;
     flex-direction: column;
@@ -117,20 +100,27 @@ input {
     width: 200px;
     height: 1.5rem;
     padding: 4px;
-    border: 1px solid rgb(170, 170, 170);
+    border: 2px solid rgb(202, 202, 202);
     border-radius: 4px;
 }
+.middle-section input:hover,
+
+.middle-section input:focus-visible{
+    border-color: #CCFF00;
+    box-shadow: 0 5px 5px -5px var(--drop-shadow);
+}
+
 /*BOTTOM*/
 .bottom-section {
     padding: 40px;
 }
 
 .bottom-section input {
-    background-color: green;
+    background-color: var(--court-green);
     color: white;
     font-size: 1rem;
     font-weight: bold;
-    border: none;
+    border: 2px solid var(--optic-yellow);
     border-radius: 8px;
     padding: 15px 20px;
     height: auto;
@@ -143,10 +133,10 @@ input {
     gap: 10px;
 }
 .change-login p {
-    
+    color: white;
 }
 .change-login a{
-    color: darkolivegreen;
+    color: var(--optic-yellow);
     text-decoration: none;
     font-weight: bold;
 }
